# langgraph-agents

./: .gitignore  RAG_Tools_Documentation.md  README.md  langgraph.json  pyproject.toml  requirements.txt
examples/: proposal_example.py
src/proposer/: README.md  configuration.py  graph.py  tools.py  utils.py
src/proposer/agents/critic/: core.py  prompts.py
src/proposer/agents/optimizer/: core.py  prompts.py
src/proposer/agents/proposer/: core.py  prompts.py
src/proposer/llm/: __init__.py  base.py
src/proposer/rag/: cos_document_processor.py  document_processor.py  embeddings.py  rag.py  rag_model.py
src/rag/: pdf_processor.py  rag.py  rag_model.py
src/react_agent/: graph.py  tools.py
src/tongyichat_agent/: configuration.py  graph.py  prompts.py  state.py  tools.py  utils.py
tests/cassettes/: 103fe67e-a040-4e4e-aadb-b20a7057f904.yaml
tests/integration_tests/: test_proposal_workflow.py  test_rag_tools.py
tests/proposer/: test_tools.py
tests/proposer/rag/: test_cos_processor.py
tests/unit_tests/: test_agents.py  test_pdf_processor.py  test_qwen_model.py
